# nnet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
header/: nnet.h
src/: CMakeLists.txt  matrix.c  matrix.h  netdata.c  netdata.h  netint.c  netint.h  nnet.c  nnet.h
test/: CMakeLists.txt  Fisher.txt  back52115.c.bak  back52415.c.bak  back52715.c.bak  back60415.c.bak  bp2.c.bak  building.c  gene_test.c  gene_train.c  irirs2.c.bak  iris.c.bak  lm.c.bak  mnmx.c.bak  mushroom.c  nnettest.c  proben1.c.bak  robot.c  sine.txt  soybean.c  thyroid.c  xor.c.bak  xor_gda.c.bak  xor_gdm.c.bak  xor_gdx.c  xor_gdx.c.bak
